# books-app-2

./: CLAUDE.md  README.md
.githooks/: pre-commit
books-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.json  main.py  manage.py  pyproject.toml
books-backend/alembic/: env.py
books-backend/alembic/versions/: 0e6d6f9d7e1d_add_book_events_tables.py  1d012f679eaa_initial_migration_add_users_books_and_.py  2026_01_17_2250-48b6f8e64567_add_note_event_payload_table.py  2026_01_18_1200-add_progress_events_and_current_page.py  2026_01_30_1500-add_cover_thumbnail_url_to_books_table.py  2026_02_19_1200-add_book_lists_and_items.py  2026_02_19_1300-backfill_list_items_for_existing_user_books.py  2026_02_19_1400-backfill_user_books_for_existing_books.py  2026_04_25_1200-add_cover_changed_event.py  2026_04_26_1200-add_imports_and_event_source.py  5f22316bd406_seed_initial_book_event_types.py  8340ac8cc312_add_cover_image_url_to_books_table.py  9876543210ab_remove_price_from_books_table.py  e119fed0558c_drop_legacy_timestamps_and_backfill_.py
books-backend/app/: auth.py  book_events.py  book_lists.py  config.py  cover_upgrade.py  database.py  google_books.py  image_utils.py  models.py  reading_list_import.py  schemas.py
books-backend/app/routers/: auth.py  books.py  imports.py  lists.py  reading.py
books-backend/scripts/: dev-with-sample-data.sh
books-backend/tests/: conftest.py  test_auth.py  test_book_cover_history.py  test_book_events.py  test_books.py  test_cover_upgrade.py  test_export.py  test_image_utils.py  test_import.py  test_lists.py  test_reading_status.py
books-backend/tests/fixtures/: reading_list_sample.csv
books-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/: auth.md
(+60 files in other folders)
