[project]
name = "books-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",  # Required by TestClient
]
