[project]
name = "books-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.0",
    "pwdlib[argon2]>=0.2.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.10.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a32",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0", # Required by TestClient
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["external: tests that hit external services (deselect with '-m \"not external\"')"]
